fix: :bug: Fix main nav not overlapping hero section
- Refactor z indexes for easier configuration

--- a/styles/components/_card-news.scss
+++ b/styles/components/_card-news.scss
@@ -18,7 +18,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        z-index: 1;
+        z-index: $zi-card-news-link;
     }
 }
 
@@ -51,7 +51,7 @@
         position: absolute;
         top: 10px;
         right: 0;
-        z-index: 2;
+        z-index: $zi-card-news-category;
 
         padding: 0 toRem(10);
 
