--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -18,7 +18,7 @@
     }
 
     &__content {
-        z-index: 1;
+        z-index: $zi-hero-content;
         width: 100%;
     }
 
